con codigo qR ok, vamos menem!